--- a/src/components/BanglaFood/Modal.css
+++ b/src/components/BanglaFood/Modal.css
@@ -4,27 +4,37 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent black overlay */
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .modal {
-  background-color: white;
-  padding: 20px;
-  border-radius: 8px;
+  background-color: rgb(231, 30, 30);
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  max-width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .modal-close {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  background: none;
-  border: none;
-  cursor: pointer;
+  align-self: flex-end; /* Align close button to the right */
+  margin-bottom: 10px; /* Add margin to separate from order button */
 }
 
-.modal-content {
-  /* Add additional styles for modal content */
+.modal-close:hover {
+  color: #555;
+}
+
+.submit-order-btn {
+  margin-top: 20px;
+  margin-bottom: 15px;
+}
+
+.submit-order-btn:hover {
+  background-color: #0056b3; /* Darker shade of blue on hover */
 }
